fix spacing

--- a/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.scss
+++ b/src/app/ubs/ubs-admin/components/ubs-admin-table/ubs-admin-table.component.scss
@@ -51,7 +51,7 @@ mat-header-cell {
   min-height: 39px;
   overflow: hidden;
   word-wrap: break-word;
-  white-space: nowrap;
+  white-space: normal;
   overflow-wrap: break-word;
   flex: none;
   display: block;
